--- a/index html aula 02.html
+++ b/index html aula 02.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="texto">
     <h1>Olá Mundo!</h1>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod impedit sed tempora 
         pariatur sunt totam ipsum cumque maiores at. Voluptates optio asperiores minus quasi quis, 
         fugiat reiciendis inventore modi.</p>
     <h2>Select</h2>
+    </div>
 </body>
 </html>
